--- a/css/style.less
+++ b/css/style.less
@@ -63,7 +63,7 @@
          align-items: center;
           &__box{
             position: absolute;
-            top: 0;
+            top: -4px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -89,6 +89,9 @@
               font-size: @size-md;
               padding: 10px 30px;
               border-radius: 10px;
+              position: absolute;
+              bottom: 26px;
+              width: 180px;
             }
           }
         
@@ -100,7 +103,7 @@
           align-items: center;
             &__box{
               position: absolute;
-              top: 0;
+              top: 27px;
               display: flex;
               flex-direction: column;
               justify-content: center;
@@ -122,6 +125,7 @@
                 align-items: center;
                 justify-content: center;
                 border-radius: 10px;
+                width: ;
 
               }          
               &-line1{
@@ -141,6 +145,7 @@
                 font-size: @size-md;
                 padding: 10px 30px;
                 border-radius: 10px;
+                width: 180px;
               }
             }
           
@@ -152,7 +157,7 @@
               align-items: center;
                 &__box{
                   position: absolute;
-                  top: 0;
+                  top: 5px;
                   display: flex;
                   flex-direction: column;
                   justify-content: center;
@@ -186,6 +191,9 @@
                     margin-top: 20px;
                     padding: 10px 30px;
                     border-radius: 10px;
+                    position: absolute;
+                    bottom: 34px;
+                    width: 180px;
                   }
                 }
               
@@ -197,7 +205,7 @@
           align-items: center;
             &__box{
               position: absolute;
-              top: 0;
+              top: -17px;
               display: flex;
               flex-direction: column;
               justify-content: center;
@@ -231,6 +239,9 @@
                 margin-top: 20px;
                 padding: 10px 30px;
                 border-radius: 10px;
+                position: absolute;
+                bottom: 12px;
+                width: 180px;
               }
             }
           
