--- a/components/footer.pug
+++ b/components/footer.pug
@@ -43,7 +43,7 @@ footer
             .footer__box__body-address 
                 h2 DIRECCIÓN
                 img(src="images/SVG/address.svg", alt="ícono de ubicación")
-                p Circuito Lacustre No. 309, Fracc. Villas del Cóbano C.P. 20150 Aguascalientes, Ags
+                p Circuito Lacustre No. 309, Fracc. Villas del Cóbano C.P. 20150 Aguascalientes, Ags.
 
             .footer__box__body-schedule
                 h2 HORARIOS DE ATENCIÓN
