Se corrigió el problema del parrafo comentado en servicios, se hizo más chica la letra en 'realizar un periódico' y se hizo un salto de línea en el footer parrafo de dirección

--- a/pug/servicios.pug
+++ b/pug/servicios.pug
@@ -10,7 +10,7 @@ block content
                 p.banner-title SERVICIOS
         p.title NUESTROS SERVICIOS
         .servicios__necesidades 
-        //-     p Una de las mayores necesidades de nuestros clientes ha sido siempre el obtener la más alta calidad, garantía y mejor tiempo de respuesta en los servicios; es por ello que en #[strong SERVICIO TÉCNICO A CALDERAS] contamos con un equipo de trabajo altamente calificado y capacitado, con sólidos y amplios conocimientos en diseño, operación, reparación, instalación y mantenimiento de calderas, permitiéndole a nuestros clientes mantenerse operativos de una forma segura y eficiente.
+            p Una de las mayores necesidades de nuestros clientes ha sido siempre el obtener la más alta calidad, garantía y mejor tiempo de respuesta en los servicios; es por ello que en #[strong SERVICIO TÉCNICO A CALDERAS] contamos con un equipo de trabajo altamente calificado y capacitado, con sólidos y amplios conocimientos en diseño, operación, reparación, instalación y mantenimiento de calderas, permitiéndole a nuestros clientes mantenerse operativos de una forma segura y eficiente.
         //- /- .servicios__carousel
         //- /-     .carousel.slide(data-bs-ride="true")#carouselExampleIndicators
         //- /-         .carousel-indicators 
