Se quita opacidad en los botones next y previus de los slides

--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,10 @@ body {
   font-size: 1.8rem;
   text-align: justify;
 }
+.carousel-control-next,
+.carousel-control-prev {
+  opacity: 1 !important;
+}
 .menu-top {
   display: -webkit-box;
   display: -ms-flexbox;
