--- a/css/style.less
+++ b/css/style.less
@@ -1,5 +1,8 @@
 @import "./globals.less";
 @import "./variables.less";
+.carousel-control-next, .carousel-control-prev{
+  opacity: 1 !important;
+}
   .menu-top{
     display: flex;
     justify-content: space-between;
