Se realizaron los siguientes cambios: Se agrega botón emergente para subir hacia el top de la pagina, se marcan mas los botones de los slides, se corrige el carousel de calderas, se corrige posicion de texto en 'La experiencia profesional', se agregan links a productos, servicios y calderas de la seción index, se realizan varias correciones de gramatica

--- a/components/header.pug
+++ b/components/header.pug
@@ -9,7 +9,7 @@ header
                     li.menu__item 
                         a(href="index.html").menu__link INICIO
                     li.menu__item 
-                        a(href="empresa.html").menu__link ¿QUÍENES SOMOS?
+                        a(href="empresa.html").menu__link ¿QUIÉNES SOMOS?
                     li.menu__item 
                         a(href="servicios.html").menu__link SERVICIOS
                     li.menu__item 
@@ -19,6 +19,8 @@ header
                     li.menu__item 
                         a(href="contacto.html").menu__link CONTACTO
                 .menu__hamburger 
-                    img(src="images/Iconos/menu.svg" alt="icono de menu").menu__img  
+                    img(src="images/Iconos/menu.svg" alt="icono de menu").menu__img
+    span.ir-arriba
+        img(src="/images/Iconos/circle-up.svg", alt="")
         
 
