--- a/css/desktop.less
+++ b/css/desktop.less
@@ -1,5 +1,8 @@
 @import "./globals.less";
 @import "./variables.less";
+.ir-arriba{
+    display: none;
+}
 .index{
     .slide1__Content{
         &__box{
