--- a/pug/calderas.pug
+++ b/pug/calderas.pug
@@ -13,28 +13,33 @@ block content
             p Venta de calderas industriales de la marca:
             img(src="images/Marcas/CLEAVERBROOKS.png", alt="Logo de CleaverBrooks")
         .calderas__carousel
-            .carousel.slide(data-bs-ride="true")#carouselCalderas
+            .carousel.slide(data-bs-ride="carousel")#carouselExampleIndicators
                 .carousel-indicators 
-                    button(type="button" data-bs-target="#carouselCalderas" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1").active
-                    button(type="button" data-bs-target="#carouselCalderas" data-bs-slide-to="1" aria-current="true" aria-label="Slide 2")
-                    button(type="button" data-bs-target="#carouselCalderas" data-bs-slide-to="2" aria-current="true" aria-label="Slide 3")
-                    button(type="button" data-bs-target="#carouselCalderas" data-bs-slide-to="3" aria-current="true" aria-label="Slide 4")
-                    button(type="button" data-bs-target="#carouselCalderas" data-bs-slide-to="4" aria-current="true" aria-label="Slide 5")
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1").active
+                        img(src="images/Calderas/caldera-1-1200x600.jpg").d-block.w-100
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2")
+                        img(src="images/Calderas/caldera-2-1200x600.jpg").d-block.w-100
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3")
+                        img(src="images/Calderas/caldera-3-1200x600.jpg").d-block.w-100
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4")
+                        img(src="images/Calderas/caldera-4-1200x600.jpg").d-block.w-100
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5")
+                        img(src="images/Calderas/caldera-5-1200x600.jpg").d-block.w-100
                 .carousel-inner 
                     .carousel-item.active 
-                        img(src="images/Calderas/caldera-1-1200x600.jpg").img-fluid
+                        img(src="images/Calderas/caldera-1-1200x600.jpg").d-block.w-100
                     .carousel-item 
-                        img(src="images/Calderas/caldera-2-1200x600.jpg").img-fluid
+                        img(src="images/Calderas/caldera-2-1200x600.jpg").d-block.w-100
                     .carousel-item 
-                        img(src="images/Calderas/caldera-3-1200x600.jpg").img-fluid
+                        img(src="images/Calderas/caldera-3-1200x600.jpg").d-block.w-100
                     .carousel-item 
-                        img(src="images/Calderas/caldera-4-1200x600.jpg").img-fluid
+                        img(src="images/Calderas/caldera-4-1200x600.jpg").d-block.w-100
                     .carousel-item 
-                        img(src="images/Calderas/caldera-5-1200x600.jpg").img-fluid
-                button(type="button" data-bs-target="#carouselCalderas" data-bs-slide="prev").carousel-control-prev
+                        img(src="images/Calderas/caldera-5-1200x600.jpg").d-block.w-100
+                button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev").carousel-control-prev
                     span(aria-hidden="true").carousel-control-prev-icon
                     span.visually-hidden Previous
-                button(type="button" data-bs-target="#carouselCalderas" data-bs-slide="next").carousel-control-next
+                button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next").carousel-control-next
                     span(aria-hidden="true").carousel-control-next-icon
                     span.visually-hidden Next
 
