--- a/pug/index.pug
+++ b/pug/index.pug
@@ -89,20 +89,23 @@ block content
             p.index__area__prioridad__title En #[strong SERVICIO TÉCNICO A CALDERAS] nuestra prioridad es usted por lo que le ofrecemos:
             .index__area__prioridad__items
                 .index__area__prioridad__items-item
-                    .box-img 
-                        img(src="images/SVG/engrane.svg")
-                    .box-txt
-                        p SERVICIOS
+                    a(href="servicios.html") 
+                        .box-img 
+                            img(src="images/SVG/engrane.svg")
+                        .box-txt
+                            p SERVICIOS
                 .index__area__prioridad__items-item.index__area__prioridad__items-item-m
-                    .box-img
-                        img(src="images/SVG/manometro.svg")
-                    .box-txt
-                        p PRODUCTOS
+                    a(href="productos.html") 
+                        .box-img
+                            img(src="images/SVG/manometro.svg")
+                        .box-txt
+                            p PRODUCTOS
                 .index__area__prioridad__items-item
-                    .box-img 
-                        img(src="images/SVG/caldera.svg")
-                    .box-txt
-                        p CALDERAS
+                    a(href="calderas.html") 
+                        .box-img 
+                            img(src="images/SVG/caldera.svg")
+                        .box-txt
+                            p CALDERAS
         .carousel__marcas 
             include ../marcas.html
         p.title ¿POR QUÉ ELEGIRNOS?
