--- a/pug/marcas.pug
+++ b/pug/marcas.pug
@@ -58,4 +58,4 @@ p.title MARCAS
             span.visually-hidden Next
 
 .marcas__propiedad 
-    p *Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, #[strong SERVICIO TÉCNICO A CALDERAS] los utiliza con fines informativos e ilustrativos.
+    p *Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, #[br]#[strong SERVICIO TÉCNICO A CALDERAS]#[br] los utiliza con fines informativos e ilustrativos.
