--- a/pug/productos.pug
+++ b/pug/productos.pug
@@ -38,19 +38,19 @@ block content
                                     p Rollo de lámina
                 .acccordion-item
                     h2.accordion-header#panelsStayOpen-headingTwo
-                        button(type="button" data-bs-toggle="collapse" data-bs-target="#panelBombeo" aria-expanded="true" aria-controls="panelBombeo").accordion-button.collapsed BOMBAS INDUSTRIALES Y EQUIPO DE BOMBEO
+                        button(type="button" data-bs-toggle="collapse" data-bs-target="#panelBombeo" aria-expanded="true" aria-controls="panelBombeo").accordion-button.collapsed BOMBAS INDUSTRIALES Y EQUIPOS DE BOMBEO
                     .accordion-collapse.collapse(aria-labelledby="panelsStayOpen-headingTwo")#panelBombeo
                         .accordion-body
                             .accordion-body__box
                                 .accordion-body__box-img
                                     img(src="images/Products/bombasParaAgua600x600.jpg").accordion-body__box__img.img-fluid
                                 .accordion-body__box-txt
-                                    p Bombas para agua
+                                    p Bomba para agua
                             .accordion-body__box
                                 .accordion-body__box-img
                                     img(src="images/Products/bombasCombustoleo600x600.jpg").accordion-body__box__img.img-fluid
                                 .accordion-body__box-txt
-                                    p Bombas para combustóleo 
+                                    p Bomba para combustóleo 
                             .accordion-body__box
                                 .accordion-body__box-img
                                     img(src="images/Products/equipoBOMBEO600x600.jpg").accordion-body__box__img.img-fluid
@@ -125,7 +125,7 @@ block content
                                 .accordion-body__box-img
                                     img(src="images/Products/Cable-1.jpg").accordion-body__box__img.img-fluid
                                 .accordion-body__box-txt
-                                    p Cables
+                                    p Cable
                             .accordion-body__box
                                 .accordion-body__box-img
                                     img(src="images/Products/Electrodos.jpg").accordion-body__box__img.img-fluid
