--- a/components/header.html
+++ b/components/header.html
@@ -7,7 +7,7 @@
     <section class="menu__container"> <img class="menu__logo" src="images/SVG/logoSertec.svg"/>
       <ul class="menu__links"> 
         <li class="menu__item"> <a class="menu__link" href="index.html">INICIO</a></li>
-        <li class="menu__item"> <a class="menu__link" href="empresa.html">¿QUÍENES SOMOS?</a></li>
+        <li class="menu__item"> <a class="menu__link" href="empresa.html">¿QUIÉNES SOMOS?</a></li>
         <li class="menu__item"> <a class="menu__link" href="servicios.html">SERVICIOS</a></li>
         <li class="menu__item"> <a class="menu__link" href="productos.html">PRODUCTOS</a></li>
         <li class="menu__item"> <a class="menu__link" href="calderas.html">CALDERAS</a></li>
@@ -15,5 +15,5 @@
       </ul>
       <div class="menu__hamburger"> <img class="menu__img" src="images/Iconos/menu.svg" alt="icono de menu"/></div>
     </section>
-  </nav>
+  </nav><span class="ir-arriba"><img src="/images/Iconos/circle-up.svg" alt=""/></span>
 </header>
