--- a/css/tablet.less
+++ b/css/tablet.less
@@ -1,5 +1,18 @@
 @import "./globals.less";
 @import "./variables.less";
+.ir-arriba{
+    display:none;
+    background-repeat:no-repeat;
+    font-size: 4em;
+    color:#32a2b8;
+    cursor:pointer;
+    position:fixed;
+    bottom:10px;
+    left:700px;
+    z-index:2;
+    opacity: .6;
+  }
+  
 .title{
     margin: 48px auto;
     width: 100%;
