Se corrigen tamaños de letra en index

--- a/css/style.less
+++ b/css/style.less
@@ -385,7 +385,7 @@
             color: @color-white;
             font-size: @size-xl;
             text-align: justify;
-            font-weight: @font-light;
+            font-weight: @font-regular  ;
             line-height: 3.2rem;
             strong{
               font-weight: @font-bold;
@@ -413,9 +413,10 @@
         display: flex;
         flex-direction: column;
         &__title{
-          font-size: 2.2rem;
+          font-size: 2rem;
           text-align: justify;
           margin: 20px;
+          font-weight: @font-regular;
         }
         &__items{
           display: grid;
@@ -489,8 +490,9 @@
               margin-bottom: 0;
               color: @color-white;
               text-align: justify;
-              font-size: @size-lg;
+              font-size: @size-xl;
               padding: 0 5px;
+              font-weight: @font-regular;
               
             }
           }
