Se corrige el /images para que lea el archivo en github

--- a/components/header.pug
+++ b/components/header.pug
@@ -21,6 +21,6 @@ header
                 .menu__hamburger 
                     img(src="images/Iconos/menu.svg" alt="icono de menu").menu__img
     span.ir-arriba
-        img(src="/images/Iconos/circle-up.svg", alt="")
+        img(src="images/Iconos/circle-up.svg", alt="")
         
 
