Se corrigen los enlaces de los slides, se quitó la ruta de la carpeta html

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -17,7 +17,7 @@ block content
                         .slide1__Content__box
                             p.slide1__Content__box-line1 30 años
                             p.slide1__Content__box-line2 #[strong DE EXPERIENCIA #[br]NOS RESPALDAN] 
-                            a(href="/html/empresa.html").slide1__Content__box-line3 Conózcanos    
+                            a(href="empresa.html").slide1__Content__box-line3 Conózcanos    
                             
                 .carousel-item
                         picture.carousel-item__img
@@ -29,7 +29,7 @@ block content
                                 p.slide2__Content__box-line1 MANTENIMIENTO PREVENTIVO #[br]Y#[br] CORRECTIVO
                                 p.slide2__Content__box-line2 CONVERSIONES #[br]Y#[br] CARBURACIONES
                                 p.slide2__Content__box-line3 AUTOMATIZACIÓN #[br]DE#[br] CALDERAS
-                                a(href="/html/servicios.html").slide2__Content__box-line4 Servicios
+                                a(href="servicios.html").slide2__Content__box-line4 Servicios
                 .carousel-item
                     picture.carousel-item__img
                         source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
@@ -38,7 +38,7 @@ block content
                     .slide3__Content
                         .slide3__Content__box
                             p.slide3__Content__box-line1 SUMINISTRO DE#[br]#[strong REFACCIONES #[br] ORIGINALES] 
-                            a(href="/html/productos.html").slide3__Content__box-line2 Productos
+                            a(href="productos.html").slide3__Content__box-line2 Productos
                 .carousel-item
                     picture.carousel-item__img
                         source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
@@ -47,7 +47,7 @@ block content
                     .slide4__Content
                         .slide4__Content__box
                             p.slide4__Content__box-line1 VENTA DE#[br]#[strong CALDERAS] 
-                            a(href="/html/calderas.html").slide4__Content__box-line2 Calderas             
+                            a(href="calderas.html").slide4__Content__box-line2 Calderas             
                 
             button(type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev").carousel-control-prev
                 span(aria-hidden="true").carousel-control-prev-icon
@@ -62,7 +62,7 @@ block content
                 img(src="images/PNG/fondoContactenos.png")
             p ¿Necesita asesoría especializada para su empresa?
         .index__contactenos__btn
-            a(href="/html/contactenos.html") Contáctenos
+            a(href="contactenos.html") Contáctenos
     p.title ACERCA DE NOSOTROS
     .index__area
         .index__area__acerca
