Cambios solicitados por Sandra, Archivos 1,2 y 3 pdf

--- a/css/form.less
+++ b/css/form.less
@@ -57,9 +57,15 @@
         .form{
             padding: 3.5em 1em;
             margin: 30px;
+            display: grid;
             &__container{
                 &__cta{
-                    margin: 0 40px;
+                    height: 40px;
+                    width: 140px;
+                    justify-self: center;
+                    border-radius: 10px;
+                    font-size: 1.4rem;
+
                 }
             }
             
