--- a/pug/index.pug
+++ b/pug/index.pug
@@ -62,7 +62,7 @@ block content
                 img(src="images/PNG/fondoContactenos.png")
             p ¿Necesita asesoría especializada para su empresa?
         .index__contactenos__btn
-            a(href="contactenos.html") Contáctenos
+            a(href="contacto.html") Contáctenos
     p.title ACERCA DE NOSOTROS
     .index__area
         .index__area__acerca
@@ -89,23 +89,27 @@ block content
             p.index__area__prioridad__title En #[strong SERVICIO TÉCNICO A CALDERAS] nuestra prioridad es usted por lo que le ofrecemos:
             .index__area__prioridad__items
                 .index__area__prioridad__items-item
-                    a(href="servicios.html") 
                         .box-img 
                             img(src="images/SVG/engrane.svg")
                         .box-txt
                             p SERVICIOS
+                            a(href="servicios.html") Más información 
+
                 .index__area__prioridad__items-item.index__area__prioridad__items-item-m
-                    a(href="productos.html") 
                         .box-img
                             img(src="images/SVG/manometro.svg")
+
                         .box-txt
                             p PRODUCTOS
+                            a(href="productos.html") Más información 
+
                 .index__area__prioridad__items-item
-                    a(href="calderas.html") 
                         .box-img 
                             img(src="images/SVG/caldera.svg")
                         .box-txt
                             p CALDERAS
+                            a(href="calderas.html") Más información
+                            
         .carousel__marcas 
             include ../marcas.html
         p.title ¿POR QUÉ ELEGIRNOS?
