--- a/css/form.css
+++ b/css/form.css
@@ -67,13 +67,6 @@ body {
 .section__header-content p span {
   font-weight: 800;
 }
-.marcas__propiedad {
-  margin: 40px auto;
-}
-.marcas__propiedad p {
-  font-size: 1.8rem;
-  text-align: justify;
-}
 .contacto__form {
   font-family: 'Inter', sans-serif !important;
   display: -webkit-box;
@@ -130,8 +123,15 @@ body {
   .contacto__form .form {
     padding: 3.5em 1em;
     margin: 30px;
+    display: -ms-grid;
+    display: grid;
   }
   .contacto__form .form__container__cta {
-    margin: 0 40px;
+    height: 40px;
+    width: 140px;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    border-radius: 10px;
+    font-size: 1.4rem;
   }
 }
