--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,8 @@ body {
 }
 .ir-arriba {
   display: none;
-  padding: 20px;
+  padding: 5px;
+  opacity: 0.7;
   background-color: #831d22;
   font-size: 20px;
   cursor: pointer;
@@ -145,6 +146,9 @@ body {
 }
 .marcas__propiedad p {
   text-align: center;
+}
+.marcas__propiedad {
+  margin: 40px auto;
 }
 .banner-title {
   font-size: 4.5rem !important;
@@ -618,8 +622,7 @@ body {
   display: -ms-grid;
   display: grid;
 }
-.index__area__prioridad__items-item a {
-  text-decoration: none;
+.index__area__prioridad__items-item {
   margin: 40px;
   border: 5px solid #000000;
   border-radius: 20px;
@@ -633,7 +636,7 @@ body {
       grid-template-areas: "image" "txt";
   cursor: pointer;
 }
-.index__area__prioridad__items-item a .box-img {
+.index__area__prioridad__items-item .box-img {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: image;
@@ -653,7 +656,7 @@ body {
           justify-content: center;
   padding: 40px;
 }
-.index__area__prioridad__items-item a .box-txt {
+.index__area__prioridad__items-item .box-txt {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
@@ -662,6 +665,10 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -671,14 +678,20 @@ body {
   border-radius: 0 0 15px 15px;
   height: 100%;
 }
-.index__area__prioridad__items-item a .box-txt p {
+.index__area__prioridad__items-item .box-txt p {
   text-align: center;
   font-size: 2.8rem;
   color: #ffffff;
   font-weight: 600;
-  padding: 20px 0;
+  padding: 5px 0;
   margin-bottom: 0;
   border-radius: 0 0 15px 15px;
+}
+.index__area__prioridad__items-item .box-txt a {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 1.4rem;
+  text-align: center;
 }
 .index__area__elegirnos {
   position: relative;
@@ -726,7 +739,7 @@ body {
   color: #ffffff;
   padding: 30px;
   text-align: justify;
-  font-size: 2.2rem;
+  font-size: 2rem;
 }
 .empresa__content__mvv {
   display: -ms-grid;
@@ -821,11 +834,11 @@ body {
 .servicios__periodico p {
   position: absolute;
   color: #ffffff;
-  text-align: left;
-  font-size: 2.6rem;
+  text-align: center;
+  font-size: 2.4rem;
   font-weight: 300;
-  margin: 40px 30px;
-  width: 270px;
+  margin: 40px 5px;
+  width: 254px;
   line-height: 3.2rem;
 }
 .servicios__periodico p strong {
@@ -858,9 +871,12 @@ body {
   color: #ffffff;
   font-size: 1.4rem;
   border: none;
-  height: 45px;
-  margin: 10px 30px;
+  height: 40px;
+  margin: 10px 70px;
   border-radius: 10px;
+  width: 140px;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
 .servicios__catalogo__items-item .modal-content-header {
   display: -webkit-box;
@@ -1011,7 +1027,7 @@ body {
 }
 .contacto__txt p {
   font-weight: 300;
-  font-size: 1.8rem;
+  font-size: 2rem;
   margin: 30px;
   text-align: justify;
 }
@@ -1054,13 +1070,13 @@ body {
   width: 200px;
 }
 .contacto__box__form #myform input[type=button] {
-  height: 25px;
+  height: 40px;
   width: 50px;
   margin: 20px;
   background-color: #000000;
   color: #ffffff;
   border-radius: 10px;
-  width: 200px;
+  width: 140px;
 }
 .contacto__convencer {
   position: relative;
