--- a/css/style.less
+++ b/css/style.less
@@ -2,7 +2,8 @@
 @import "./variables.less";
 .ir-arriba{
   display:none;
-	padding:20px;
+	padding:5px;
+  opacity: .7;
 	background-color: @color-secondary;
 	font-size:20px;
 	cursor:pointer;
@@ -59,6 +60,9 @@
   }
   .marcas__propiedad p{
     text-align: center;
+  }
+  .marcas__propiedad {
+    margin: 40px auto;
   }
   .banner-title{
     font-size: 4.5rem !important;
@@ -421,8 +425,6 @@
         &__items{
           display: grid;
           &-item{
-            a{
-              text-decoration: none;
               margin: 40px;
               border: 5px solid @color-primary;
               border-radius: 20px;
@@ -448,6 +450,7 @@
                 grid-area: txt;
                 background-color: @color-primary;
                 display: flex;
+                flex-direction: column;
                 justify-content: center;
                 align-items: center;
                 border-radius: 0 0 15px 15px;
@@ -457,13 +460,19 @@
                   font-size: 2.8rem;
                   color: @color-white;
                   font-weight: @font-semibold;
-                  padding: 20px 0;
+                  padding: 5px 0;
                   margin-bottom: 0;
                   border-radius: 0 0 15px 15px;
                 }
+                a{
+                  text-decoration: none;
+                  color: @color-white;
+                  font-size: @size-md;
+                  text-align: center;
+                }
               }
 
-            }
+            
           
           }
         }
@@ -516,7 +525,7 @@
           color: @color-white;
           padding: 30px;
           text-align: justify;
-          font-size: @size-xxl;
+          font-size: @size-xl;
 
         }
       }
@@ -590,13 +599,11 @@
       p{
         position: absolute;    
         color: @color-white;
-        text-align: left;
-        font-size: 2.6rem;
+        text-align: center;
+        font-size: 2.4rem;
         font-weight: @font-light;
-        margin: 40px 30px;
-        width: 270px;
-   
-
+        margin: 40px 5px;
+        width: 254px;
         line-height: 3.2rem;
         strong{
           font-weight: @font-semibold;
@@ -604,14 +611,9 @@
       }
     }
     &__catalogo{
-      h2{
-
-      }
       &__items{
         display: grid;
         &-item{
-          
-
           margin: 20px 10px;
           border: 2px solid @color-gray;
           display: grid;
@@ -632,9 +634,11 @@
             color: @color-white;
             font-size: @size-md;
             border: none;
-            height: 45px;
-            margin: 10px 30px;
+            height: 40px;
+            margin: 10px 70px;
             border-radius: 10px;
+            width: 140px;
+            justify-self: center;
           }
           .modal{
             &-content{
@@ -809,7 +813,7 @@
         }
         p{
             font-weight: @font-light;
-            font-size: 1.8rem;
+            font-size: @size-xl;
             margin: 30px;
             text-align: justify;
 
@@ -842,13 +846,13 @@
                     width: 200px;
                 }        
                 input[type=button]{
-                    height: 25px;
+                    height: 40px;
                     width: 50px;
                     margin: 20px;
                     background-color: @color-primary;
                     color: @color-white;
                     border-radius: 10px;
-                    width: 200px;
+                    width: 140px;
                 }
             }
         }
