Se quitaron unos pedazos de código que no correspondian a este archivo y se pasaron al archivo style.css

--- a/css/form.css
+++ b/css/form.css
@@ -67,6 +67,13 @@ body {
 .section__header-content p span {
   font-weight: 800;
 }
+.marcas__propiedad {
+  margin: 40px auto;
+}
+.marcas__propiedad p {
+  font-size: 1.8rem;
+  text-align: justify;
+}
 .contacto__form {
   font-family: 'Inter', sans-serif !important;
   display: -webkit-box;
