--- a/pug/servicios.pug
+++ b/pug/servicios.pug
@@ -11,7 +11,72 @@ block content
         p.title NUESTROS SERVICIOS
         .servicios__necesidades 
             p Una de las mayores necesidades de nuestros clientes ha sido siempre el obtener la más alta calidad, garantía y mejor tiempo de respuesta en los servicios; es por ello que en #[strong SERVICIO TÉCNICO A CALDERAS] contamos con un equipo de trabajo altamente calificado y capacitado, con sólidos y amplios conocimientos en diseño, operación, reparación, instalación y mantenimiento de calderas, permitiéndole a nuestros clientes mantenerse operativos de una forma segura y eficiente.
-        //- /- .servicios__carousel
+        .servicios__carousel
+            .carousel.slide(data-bs-ride="carousel")#carouselExampleIndicators
+                .carousel-indicators 
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1").active
+                        img(src="images/FotosServicios/0.jpg").d-block.w-100.img-fluid
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2")
+                        img(src="images/FotosServicios/1.jpg").d-block.w-100.img-fluid
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3")
+                        img(src="images/FotosServicios/2.jpg").d-block.w-100.img-fluid
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4")
+                        img(src="images/FotosServicios/3.jpg").d-block.w-100.img-fluid
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5")
+                        img(src="images/FotosServicios/4.jpg").d-block.w-100.img-fluid
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-current="true" aria-label="Slide 6").active
+                        img(src="images/FotosServicios/5.jpg").d-block.w-100.img-fluid
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7")
+                        img(src="images/FotosServicios/6.jpg").d-block.w-100.img-fluid
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8")
+                        img(src="images/FotosServicios/7.jpg").d-block.w-100.img-fluid
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9")
+                        img(src="images/FotosServicios/8.jpg").d-block.w-100.img-fluid
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10")
+                        img(src="images/FotosServicios/9.jpg").d-block.w-100.img-fluid
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-current="true" aria-label="Slide 11").active
+                        img(src="images/FotosServicios/10.jpg").d-block.w-100.img-fluid
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11" aria-label="Slide 12")
+                        img(src="images/FotosServicios/11.jpg").d-block.w-100.img-fluid
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12" aria-label="Slide 13")
+                        img(src="images/FotosServicios/12.jpg").d-block.w-100.img-fluid
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="13" aria-label="Slide 14")
+                        img(src="images/FotosServicios/13.jpg").d-block.w-100.img-fluid
+                .carousel-inner 
+                    .carousel-item.active 
+                        img(src="images/FotosServicios/0.jpg").d-block.w-100
+                    .carousel-item 
+                        img(src="images/FotosServicios/1.jpg").d-block.w-100
+                    .carousel-item 
+                        img(src="images/FotosServicios/2.jpg").d-block.w-100
+                    .carousel-item 
+                        img(src="images/FotosServicios/3.jpg").d-block.w-100
+                    .carousel-item 
+                        img(src="images/FotosServicios/4.jpg").d-block.w-100
+                    .carousel-item 
+                        img(src="images/FotosServicios/5.jpg").d-block.w-100
+                    .carousel-item 
+                        img(src="images/FotosServicios/6.jpg").d-block.w-100
+                    .carousel-item 
+                        img(src="images/FotosServicios/7.jpg").d-block.w-100
+                    .carousel-item 
+                        img(src="images/FotosServicios/8.jpg").d-block.w-100
+                    .carousel-item 
+                        img(src="images/FotosServicios/9.jpg").d-block.w-100
+                    .carousel-item 
+                        img(src="images/FotosServicios/10.jpg").d-block.w-100
+                    .carousel-item 
+                        img(src="images/FotosServicios/11.jpg").d-block.w-100
+                    .carousel-item 
+                        img(src="images/FotosServicios/12.jpg").d-block.w-100
+                    .carousel-item 
+                        img(src="images/FotosServicios/13.jpg").d-block.w-100
+                button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev").carousel-control-prev
+                    span(aria-hidden="true").carousel-control-prev-icon
+                    span.visually-hidden Previous
+                button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next").carousel-control-next
+                    span(aria-hidden="true").carousel-control-next-icon
+                    span.visually-hidden Next
         //- /-     .carousel.slide(data-bs-ride="true")#carouselExampleIndicators
         //- /-         .carousel-indicators 
         //- /-             button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1").active
