Se quita del archivo globals.css las propiedadees del parrafo de marcas

--- a/components/head.pug
+++ b/components/head.pug
@@ -5,7 +5,7 @@ head
     title Sertec Calderas
     link(rel="preconnect" href="https://fonts.googleapis.com")
     link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
-    link(href="https://fonts.googleapis.com/css2?family=Allura&family=Inter:wght@200;300;400;600&display=swap" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css2?family=Allura&family=Inter:wght@200;300;400;600&family=Poppins:wght@800&display=swap" rel="stylesheet")
     link(rel="stylesheet" href="css/style.css")
     link(rel="stylesheet" href="css/tablet.css" media="screen and (min-width: 768px)")
     link(rel="stylesheet" href="css/desktop.css" media="screen and (min-width: 1024px)")
