--- a/css/style.less
+++ b/css/style.less
@@ -60,6 +60,7 @@
   }
   .marcas__propiedad p{
     text-align: center;
+    font-size: @size-lg;
   }
   .marcas__propiedad {
     margin: 40px auto;
@@ -586,7 +587,7 @@
       margin: 20px 15px;
       p{
         text-align: justify;
-        font-size: @size-lg;
+        font-size: @size-xl;
         font-weight: @font-regular;
       }
     }
@@ -795,7 +796,6 @@
         text-align: left;
         font-weight: @font-light;
       }
-
     }
   }
   .contacto{
