--- a/css/variables.less
+++ b/css/variables.less
@@ -8,6 +8,7 @@
 @color-blue: #072A49;
 @font-family1: 'Inter', sans-serif;
 @font-family2: 'Allura', sans-serif;
+@font-family3: 'Poppins', sans-serif;
 @size-sm: 1.2rem;
 @size-md: 1.4rem;
 @size-lg: 1.8rem;
