--- a/components/head.html
+++ b/components/head.html
@@ -6,7 +6,7 @@
   <title>Sertec Calderas</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
-  <link href="https://fonts.googleapis.com/css2?family=Allura&amp;family=Inter:wght@200;300;400;600&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Allura&amp;family=Inter:wght@200;300;400;600&amp;family=Poppins:wght@800&amp;display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="stylesheet" href="css/tablet.css" media="screen and (min-width: 768px)"/>
   <link rel="stylesheet" href="css/desktop.css" media="screen and (min-width: 1024px)"/>
