Se corrige el peso de la letra a regular en servicios, productos, calderas y contacto

--- a/css/style.less
+++ b/css/style.less
@@ -794,7 +794,7 @@
       p{
         font-size: @size-xl;
         text-align: left;
-        font-weight: @font-light;
+        font-weight: @font-regular;
       }
     }
   }
@@ -810,7 +810,7 @@
             font-weight: @font-semibold;
         }
         p{
-            font-weight: @font-light;
+            font-weight: @font-regular;
             font-size: @size-xl;
             margin: 30px;
             text-align: justify;
