Se corrige carousel de imagenes de servicios

--- a/pug/servicios.pug
+++ b/pug/servicios.pug
@@ -14,31 +14,31 @@ block content
         .servicios__carousel
             .carousel.slide(data-bs-ride="carousel")#carouselExampleIndicators
                 .carousel-indicators 
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2")
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-label="Slide 1").active
                         img(src="images/FotosServicios/1.jpg").d-block.w-100.img-fluid
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3")
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2")
                         img(src="images/FotosServicios/2.jpg").d-block.w-100.img-fluid
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4")
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3")
                         img(src="images/FotosServicios/3.jpg").d-block.w-100.img-fluid
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5")
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4")
                         img(src="images/FotosServicios/4.jpg").d-block.w-100.img-fluid
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-current="true" aria-label="Slide 6").active
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5")
                         img(src="images/FotosServicios/5.jpg").d-block.w-100.img-fluid
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7")
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6")
                         img(src="images/FotosServicios/6.jpg").d-block.w-100.img-fluid
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8")
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7")
                         img(src="images/FotosServicios/7.jpg").d-block.w-100.img-fluid
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9")
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8")
                         img(src="images/FotosServicios/8.jpg").d-block.w-100.img-fluid
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10")
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9")
                         img(src="images/FotosServicios/9.jpg").d-block.w-100.img-fluid
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-current="true" aria-label="Slide 11").active
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10")
                         img(src="images/FotosServicios/10.jpg").d-block.w-100.img-fluid
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11" aria-label="Slide 12")
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 11")
                         img(src="images/FotosServicios/11.jpg").d-block.w-100.img-fluid
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12" aria-label="Slide 13")
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11" aria-label="Slide 12")
                         img(src="images/FotosServicios/12.jpg").d-block.w-100.img-fluid
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="13" aria-label="Slide 14")
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12" aria-label="Slide 13")
                         img(src="images/FotosServicios/13.jpg").d-block.w-100.img-fluid
                 .carousel-inner 
                     .carousel-item.active
